<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="noga.td1.android.iutsd.myweighton.MyWeightOn"
    tools:showIn="@layout/activity_my_weight_on">
    <!--  android:orientation="vertical"  permet d'avoir le mode portrait -->

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:id="@+id/linearLayout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="56dp"
            android:id="@+id/textView"
            android:text="@string/label1"
            android:layout_marginLeft="20dp"
            android:autoText="false"
            android:editable="false"
            android:textSize="15sp" />

        <EditText
            android:layout_width="157dp"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/editText"
            android:layout_marginLeft="20dp"
            android:hint="@string/saisi" />

        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/switch2"
            android:textOn="@string/textON"
            android:textOff="@string/textOFF"
            android:showText="true"
            android:layout_weight="0.41"
            android:checked="true" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="50dp"
        android:minWidth="300dp"
        android:layout_marginTop="38dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:id="@+id/linearLayout2"
        android:layout_below="@+id/linearLayout"
        android:layout_centerHorizontal="true">

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout2"
        android:layout_centerHorizontal="true"
        android:weightSum="1"
        android:id="@+id/linearLayout3">

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:id="@+id/groupeButton">

            <RadioButton
                android:layout_width="81dp"
                android:layout_height="wrap_content"
                android:text="Lune"
                android:id="@+id/radioButton"
                android:checked="false"
                android:buttonTint="#bab0b0" />

            <RadioButton
                android:layout_width="82dp"
                android:layout_height="wrap_content"
                android:text="Mercure"
                android:id="@+id/radioButton2"
                android:checked="false"
                android:layout_weight="0.48"
                android:buttonTint="#e16426" />

            <RadioButton
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="Mars"
                android:id="@+id/radioButton3"
                android:checked="false"
                android:buttonTintMode="src_in"
                android:buttonTint="#b33c3c" />

            <RadioButton
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="Jupiter"
                android:id="@+id/radioButton4"
                android:layout_weight="0.05"
                android:checked="false"
                android:buttonTint="#d23a3a" />
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout3"
        android:layout_centerHorizontal="true"
        android:gravity="center_vertical|center_horizontal"
        android:id="@+id/linearLayout4">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Calcul"
            android:id="@+id/button1"
            android:layout_gravity="center_horizontal"
            android:onClick="onClick" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="RAZ"
            android:id="@+id/button2"
            android:layout_gravity="center_horizontal" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/textView3"
        android:width="200dp"
        android:height="50dp"
        android:textAlignment="center"
        android:phoneNumber="false"
        android:layout_below="@+id/linearLayout4"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/label2"
        android:id="@+id/textView2"
        android:layout_alignTop="@+id/linearLayout2"
        android:layout_alignStart="@+id/linearLayout4" />

</RelativeLayout>
